KW-309/fix: nowrap table 수정 (#43)

--- a/src/components/table/css/DefaultTable.css
+++ b/src/components/table/css/DefaultTable.css
@@ -40,3 +40,8 @@
   .default-table .clickable-row:hover {
     background-color: #f0f8ff; 
   }
+
+  .default-table th,
+  .default-table td {
+    white-space: nowrap;
+  }
